--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,13 @@
 {
     "name": "dingo/blueprint",
     "description": "API Blueprint documentation generator.",
-    "keywords": ["blueprint", "api", "laravel", "dingo", "docs"],
+    "keywords": [
+        "blueprint",
+        "api",
+        "laravel",
+        "dingo",
+        "docs"
+    ],
     "license": "BSD-3-Clause",
     "authors": [
         {
@@ -11,8 +17,8 @@
     ],
     "require": {
         "php": "^7.2.5|^8.0",
-        "illuminate/support": "^7.0|^8.0",
-        "illuminate/filesystem": "^7.0|^8.0",
+        "illuminate/support": "^7.0|^8.0|^9.0",
+        "illuminate/filesystem": "^7.0|^8.0|^9.0",
         "doctrine/annotations": "~1.2",
         "phpdocumentor/reflection-docblock": "^3.1 || ^4.1 || ^5"
     },
@@ -30,7 +36,7 @@
             "Dingo\\Blueprint\\Tests\\": "tests"
         }
     },
-     "extra": {
+    "extra": {
         "branch-alias": {
             "dev-master": "0.2-dev"
         }
